src/styles/blueprint-overrides.css
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

:global {
  .bp3-menu-item:hover {
    background: var(--primary-6);
    color: var(--white);
  }

  .bp3-menu-item.bp3-active,
  .bp3-menu-item.bp3-intent-primary.bp3-active,
  .bp3-submenu .bp3-popover-target.bp3-intent-primary.bp3-popover-open > .bp3-menu-item,
  .bp3-submenu .bp3-popover-target.bp3-popover-open > .bp3-menu-item {
    background: var(--primary-7);
    color: var(--white);

    &:hover {
      background: var(--primary-6);
      color: var(--white);
    }
  }

  .bp3-popover.bp3-dark .bp3-popover-arrow::before,
  .bp3-dark .bp3-popover .bp3-popover-arrow::before {
    box-shadow: 0px 0px 2px rgba(40, 41, 61, 0.04), 0px 4px 8px rgba(96, 97, 112, 0.16);
  }

  .bp3-popover.bp3-dark,
  .bp3-dark .bp3-popover {
    border-radius: 8px;
    box-shadow: 0px 0px 2px rgba(40, 41, 61, 0.04), 0px 4px 8px rgba(96, 97, 112, 0.16);
  }

  .bp3-popover .bp3-popover-content {
    border-radius: 8px;
  }

  /** Background color */
  .bp3-popover.bp3-dark .bp3-popover-content,
  .bp3-dark .bp3-popover .bp3-popover-content {
    background: var(--primary-9-dark);
  }

  /** Twisty */
  .bp3-popover.bp3-dark .bp3-popover-arrow-border,
  .bp3-dark .bp3-popover .bp3-popover-arrow-border,
  .bp3-popover.bp3-dark .bp3-popover-arrow-fill,
  .bp3-dark .bp3-popover .bp3-popover-arrow-fill {
    fill: var(--primary-9-dark);
  }
}

